# steam-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/: FUNDING.yml
.github/workflows/: test.yml
src/: app.rs  client.rs  config.rs  interface.rs  lib.rs  main.rs
src/interface/: account.rs  executable.rs  game.rs  game_status.rs  mod.rs  proton_data.rs  steam_cmd.rs
src/util/: error.rs  event.rs  image.rs  log.rs  mod.rs  parser.rs  paths.rs  stateful.rs
