[package]
name = "steam-tui"
version = "0.1.3"
description = "TUI client for steamcmd."
readme = "README.md"
authors = ["madisetti <madisetti@jhu.edu>"]
license = "MIT"
repository = "https://github.com/dmadisetti/steam-tui/"
keywords = ["tui", "steam", "steamcmd", "gaming"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
regex = "1"

pretty-bytes = "0.2.2"
shellexpand = "2.1.0"

serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }

termion = { version = "1.5"}
tui = { version = "0.14", default-features = false, features = ['termion', 'serde'] }

fuzzy-matcher = "0.3.7"
lazy_static = "1.4.0"

port_scanner = "0.1.5"

exitfailure = "0.5.1"

reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.0.2", features = ["full"] }

image = "0.19.0"
[dependencies.tui-image-rgba-updated]
version = "0.2.0"
