[package]
name = "steam-tui"
version = "0.3.0"
description = "TUI client for steamcmd."
readme = "README.md"
authors = ["madisetti <madisetti@jhu.edu>"]
license = "MIT"
repository = "https://github.com/dmadisetti/steam-tui/"
keywords = ["tui", "steam", "steamcmd", "gaming"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
regex = "1"

pretty-bytes = "0.2.2"
shellexpand = "2.1.0"

serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }

crossterm = { version = "0.25"}
tui = { version = "0.18", default-features = false, features = ['crossterm', 'serde'] }
terminal-light = "1.0.0"

fuzzy-matcher = "0.3.7"
lazy_static = "1.4.0"

port_scanner = "0.1.5"

reqwest = { version = "0.11", features = ["blocking", "json"] }

atty = "0.2"

image = "0.24"

[dependencies.tui-image-rgba-updated]
version = "0.2.2"
